force-app/main/default/objects/Commercial_Contract_Status__c/Commercial_Contract_Status__c.object-meta.xml
<CustomObject>
    <description>The current status of the accounts commercial contract</description>
    <label>Commercial Contract Status</label>
    <nameField>
        <label>Commercial Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Contract Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>