force-app/main/default/objects/Commercial_Contract_Status__c/fields/Action_to_be_completed_by__c.field-meta.xml
<CustomField>
    <fullName>Action_to_be_completed_by__c</fullName>
    <inlineHelpText>What is the deadline for the current outstanding action</inlineHelpText>
    <label>Action to be completed by</label>
    <type>Date</type>
</CustomField>