force-app/main/default/objects/Commercial_Contract_Status__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>The current status of the contract</inlineHelpText>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>