force-app/main/default/objects/Commercial_Contract_Status__c/fields/Liability_carve_outs__c.field-meta.xml
<CustomField>
    <fullName>Liability_carve_outs__c</fullName>
    <label>Liability carve outs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>