force-app/main/default/objects/Commercial_Contract_Status__c/fields/Liability_cover_amount__c.field-meta.xml
<CustomField>
    <fullName>Liability_cover_amount__c</fullName>
    <label>Liability cover amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>