force-app/main/default/objects/Commercial_Contract_Status__c/fields/Next_action__c.field-meta.xml
<CustomField>
    <fullName>Next_action__c</fullName>
    <inlineHelpText>What is the next action to be completed</inlineHelpText>
    <label>Next action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>