force-app/main/default/objects/Commercial_Contract_Status__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <inlineHelpText>Date contract starts</inlineHelpText>
    <label>Start date</label>
    <type>Date</type>
</CustomField>