force-app/main/default/objects/Commercial_Contract_Status__c/fields/To_be_actioned_by__c.field-meta.xml
<CustomField>
    <fullName>To_be_actioned_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To be actioned by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Cntract_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>