force-app/main/default/objects/Commercial_Contract_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>